--- a/spring-websocket-service/src/main/resources/application.properties
+++ b/spring-websocket-service/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.cloud.config.enabled=false
+spring:
+    data:
+        mongodb:
+            database: chat
+            uri: mongodb://mongodb:27017
