--- a/spring-websocket-service/src/main/resources/application.properties
+++ b/spring-websocket-service/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.cloud.config.enabled=false
 spring:
     data:
         mongodb:
             database: chat
             uri: mongodb://mongodb:27017
+    cloud:
+        config:
+            enabled: false
